java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint4-hints.pass
Add import for java.util.LinkedList
Add import for java.util.Collections
Create field Collections in org.netbeans.test.java.hints.ImportTest4
